--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Add any required libraries for your project here
 
-numpy==1.21.2
-pandas==1.3.3
-requests==2.26.0
+numpy==1.21.2  # For numerical computations
+pandas==1.3.3  # For data manipulation and analysis
+requests==2.26.0  # For making HTTP requests
