--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 # Add any required libraries for your project here
 
-numpy==1.21.2  # For numerical computations
-pandas==1.3.3  # For data manipulation and analysis
-requests==2.26.0  # For making HTTP requests
+# Numeric computations library
+numpy==1.24.3  # For numerical computations
+
+# Data manipulation and analysis library
+pandas==1.5.3  # For data manipulation and analysis
+
+# HTTP requests library
+requests==2.28.1  # For making HTTP requests
